--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
-<title>Corne Consulting</title>
+    <title>Corne Consulting</title>
+    <link href="index.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <h1>Corne Consulting</h1>
